WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150359
[css-grid] Fix freeSpace computation with non-zero baseSize flex tracks
https://bugs.webkit.org/show_bug.cgi?id=150359
Summary
[css-grid] Fix freeSpace computation with non-zero baseSize flex tracks
Sergio Villar Senin
Reported
2015-10-20 02:30:51 PDT
[css-grid] Fix freeSpace computation with non-zero baseSize flex tracks
Attachments
Patch
(7.06 KB, patch)
2015-10-20 02:36 PDT
,
Sergio Villar Senin
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2015-10-20 02:36:05 PDT
Created
attachment 263561
[details]
Patch
Sergio Villar Senin
Comment 2
2015-10-21 04:48:04 PDT
Committed
r191385
: <
http://trac.webkit.org/changeset/191385
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug